osd: shutdown recovery_request_timer earlier

recovery_request_timer may hold some QueuePeeringEvts which PGRef,
if we dont shutdown it earlier, it potentially cause the PGRef leak
when kicking pg.

Fixes: https://tracker.ceph.com/issues/38945

Signed-off-by: Zengran Zhang <zhangzengran@sangfor.com.cn>